[package]
name = "blockchain-cli"
description = "A Rust crate provides an interface for interacting with a blockchain"
version = "1.0.12"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Slavik Pastushenko <slavpas@gmail.com>"]
keywords = ["cli", "crypto", "blockchain"]
exclude = [".prettierrc.toml", ".github/**", "examples/**"]
categories = ["command-line-utilities", "cryptography"]
documentation = "https://docs.rs/blockchain-cli"
repository = "https://github.com/slavik-pastushenko/blockchain-rust"

[lib]
name = "blockchain"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"

[dev-dependencies]
cliclack = "0.1.9"
