[package]
name = "blockchain-cli"
description = "A Rust crate provides an interface for interacting with a blockchain"
version = "1.0.22"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Slavik Pastushenko <slavpas@gmail.com>"]
keywords = ["cli", "crypto", "blockchain"]
exclude = [".github/**", "examples/**"]
categories = ["command-line-utilities", "cryptography"]
documentation = "https://docs.rs/blockchain-cli"
repository = "https://github.com/slavik-pastushenko/blockchain-rust"

[lib]
name = "blockchain"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sha2 = "0.10.8"
