[package]
name = "api-axum"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "api_axum"
path = "src/main.rs"

[dependencies]
axum = "0.6.20"
blockchain-cli = { path = "../.." }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
